--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "privataclient",
-  "productName": "privataclient",
+  "name": "PrivataClient",
+  "productName": "PrivataClient",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Client for Privata.",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -40,6 +40,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@timfish/forge-externals-plugin": "^0.2.1",
     "copy-webpack-plugin": "^11.0.0",
     "drivelist": "^11.1.0",
     "electron-squirrel-startup": "^1.0.0",
