--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -12,8 +12,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react-jsx",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types/*",
+      "../../react-app/src/@types/*"
+    ],
+    "baseUrl": "src/",
     "paths": {
-      "*": ["node_modules/*"]
+      "*": ["node_modules/*"],
+      "@/*": ["./*"]
     }
   },
   "include": ["src/**/*"]
