--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "extract-colors": "3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
