refactor: move shared types out of project

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "Privata Co. Ltd",
+    "name": "Privata Ltd",
     "email": ""
   },
   "license": "MIT",
@@ -25,9 +25,11 @@
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@electron-forge/plugin-webpack": "^6.2.1",
+    "@types/node": "^20.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "@privata/types": "file:../common-types",
     "css-loader": "^6.0.0",
     "electron": "25.2.0",
     "eslint": "^8.0.1",
