chore: update tsconfig

--- a/electron-app/tsconfig.json
+++ b/electron-app/tsconfig.json
@@ -13,7 +13,7 @@
     "jsx": "react-jsx",
     "typeRoots": [
       "./node_modules/@types",
-      "./@types/*",
+      "./types/*",
     ],
     "baseUrl": "src",
     "paths": {
