--- a/react-app/package.json
+++ b/react-app/package.json
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0"
+    "@craco/craco": "^7.1.0",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.3"
   }
 }
