--- a/react-app/package.json
+++ b/react-app/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@privata/types": "file:../common-types",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
