--- a/react-app/package.json
+++ b/react-app/package.json
@@ -7,6 +7,7 @@
     "@heroicons/react": "^2.0.18",
     "@privata/types": "file:../common-types",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
