wip: add rating card

--- a/.github/workflows/build-artifacts.yaml
+++ b/.github/workflows/build-artifacts.yaml
@@ -2,7 +2,7 @@ name: build-artifacts
 run-name: Build Artifacts
 on: [push]
 jobs:
-  build-mac-artifacts:
+  build-artifacts:
     name: Build ${{ matrix.os }} artifacts
     runs-on: ${{ matrix.os }}
     strategy:
@@ -12,6 +12,9 @@ jobs:
           - os: macos-latest
     permissions:
       contents: write
+    concurrency:
+      group: ${{ github.head_ref }}-init
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
         with:
