--- a/.github/workflows/build-artifacts.yaml
+++ b/.github/workflows/build-artifacts.yaml
@@ -37,13 +37,13 @@ jobs:
           cd electron-app
           yarn make
       - name: Retrive commit hash
-        id: commit_hash
-        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        uses: benjlevesque/short-sha@v2.2
+        id: short-sha
       - name: Publish release
         uses: svenstaro/upload-release-action@v2
         with:
-          tag: action-ci-${{ steps.commit_hash.outputs.sha_short }}
+          tag: action-ci-${{ steps.short-sha.outputs.sha }}
           repo_token: ${{ secrets.GH_PAT }}
           file: electron-app/out/make/**/*.{exe,zip}
           file_glob: true
-          release_name: CI - ${{ github.sha }}
+          release_name: CI - ${{ steps.short-sha.outputs.sha }}
