--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -31,15 +31,14 @@
     "@electron-forge/plugin-webpack": "^6.2.1",
     "@prisma/client": "^5.2.0",
     "@privata/types": "file:../common-types",
+    "@timfish/forge-externals-plugin": "^0.2.1",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
-    "@timfish/forge-externals-plugin": "^0.2.1",
-    "@privata/types": "file:../common-types",
-    "electron-squirrel-startup": "^1.0.0",
     "electron": "25.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
@@ -52,6 +51,5 @@
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
