--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -29,6 +29,7 @@
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@electron-forge/plugin-webpack": "^6.2.1",
+    "@electron-forge/shared-types": "^6.4.2",
     "@prisma/client": "^5.2.0",
     "@privata/types": "file:../common-types",
     "@timfish/forge-externals-plugin": "^0.2.1",
@@ -49,7 +50,7 @@
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
-    "typescript": "~4.5.4"
-  },
-  "dependencies": {}
+    "typescript": "~4.5.4",
+    "webpack": "^5.88.2"
+  }
 }
