prisma: complete  transfer.

--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -9,11 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
-    "prisma:migrate": "prisma migrate dev --name init",
-    "prisma:db-push": "prisma db push",
-    "prisma:generate": "prisma generate",
-    "jest:test": "jest"
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "keywords": [],
   "author": {
@@ -30,10 +26,8 @@
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@electron-forge/plugin-webpack": "^6.2.1",
     "@electron-forge/shared-types": "^6.4.2",
-    "@prisma/client": "^5.2.0",
     "@privata/types": "file:../common-types",
     "@timfish/forge-externals-plugin": "^0.2.1",
-    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -43,11 +37,8 @@
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
-    "jest": "^29.6.4",
     "node-loader": "^2.0.0",
-    "prisma": "^5.2.0",
     "style-loader": "^3.0.0",
-    "ts-jest": "^29.1.1",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
