--- a/react-app/package.json
+++ b/react-app/package.json
@@ -17,8 +17,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
@@ -27,14 +25,17 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject"
+    "eject": "craco eject",
+    "prisma-generate": "prisma generate",
+    "prisma-migrate": "prisma migrate dev --name init",
+    "prisma-db-push": "prisma db push",
+    "jest-test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +57,14 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "tailwindcss": "^3.3.3"
+    "@prisma/client": "^5.3.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "jest": "^29.7.0",
+    "prisma": "^5.3.1",
+    "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.4.2"
   }
 }
