--- a/react-app/package.json
+++ b/react-app/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -58,13 +59,12 @@
   "devDependencies": {
     "@craco/craco": "^7.1.0",
     "@prisma/client": "^5.3.1",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^29.5.5",
     "@types/node": "^16.7.13",
     "jest": "^29.7.0",
     "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.4.2"
+    "ts-node": "^10.9.1"
   }
 }
