--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common-types"]
 	path = common-types
-	url = git@github.com:AIerLab/privata-types.git
+	url = https://github.com/AIerLab/privata-types.git
