--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -14,6 +14,9 @@
     "resolveJsonModule": true,
     "isolatedModules": false,
     "noEmit": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowUnusedLabels": true,
     "jsx": "react-jsx",
     "typeRoots": [
       "./node_modules/@types",
