--- a/react-app/package.json
+++ b/react-app/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
