--- a/react-app/tsconfig.json
+++ b/react-app/tsconfig.json
@@ -22,8 +22,8 @@
     ],
     "baseUrl": "src",
     "paths": {
-      // "@/*": ["*"],
-      // "types/*": ["types/*"]
+      "@/*": ["*"],
+      "types/*": ["types/*"]
     }
   },
   "include": [
