--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,10 +8,10 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
+    "lint": "eslint --ext .ts,.tsx .",
     "prisma-generate": "prisma generate",
     "prisma-migrate": "prisma migrate dev --name init",
     "prisma-db-push": "prisma db push",
-    "jest-test": "jest",
     "npm-check-update": "npm-check --skip-unused -u"
   },
   "eslintConfig": {
@@ -65,12 +65,9 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
-    "@types/jest": "^29.5.5",
     "@types/node": "^16.7.13",
-    "jest": "^29.7.0",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.3",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
