--- a/react-app/package.json
+++ b/react-app/package.json
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.18",
     "path-browserify": "^1.0.1",
@@ -60,7 +61,9 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "uuid": "^9.0.1",
+    "web-vitals": "^2.1.0",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
